Update CSS tables and correct URLs that are too long on mobile (#327)
* Move tables into their own CSS files; scroll tables horizontally if they're too wide

* Shorten these links so they look better on mobile

* Use the jekyll variable

--- a/assets/css/_site.scss
+++ b/assets/css/_site.scss
@@ -55,14 +55,6 @@ hr {
   width: 50%;
 }
 
-tr {
-  display: table-row;
-  vertical-align: inherit;
-  border-color: inherit;
-  border-bottom: solid 0.0625rem;
-  border-color: #dee2e6;
-}
-
 #anchor {
   position: relative;
 }
